--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-API_BASE_URL=<a href="https://your-database-api-endpoint.com">https://your-database-api-endpoint.com</a>
+API_BASE_URL=<a href= "http://chelenko-data.sa-east-1.elasticbeanstalk.com/api/reservations"
 OTA_API_KEY=your_ota_api_key
